--- a/starter/ContosoDentistryWebsite/index.html
+++ b/starter/ContosoDentistryWebsite/index.html
@@ -54,6 +54,7 @@
 				<div class="col-6 col-6-medium col-12-small">
 					<section class="box style1">
 						<!-- paste code from the webchat page in azure -->
+						<iframe src='https://webchat.botframework.com/embed/dental-office-virtual-assistant-botapp?s=0t17xmcFL0A.NiDe3ZC9lRAJM9A4fou0oR1VH7Hr7l13L7RoZv5spFY'  style='min-width: 400px; width: 100%; min-height: 500px;'></iframe>
 					</section>
 				</div>
 			</div>
